Ajustes pruebas Seleccion
Se actualizaron las pruebas del modulo de seleccion porque se hicieron unos ajustes a los servicios